--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -653,19 +653,32 @@ So far, we have considered the modulation effect of morality and found that the 
 \hypertarget{participants-8}{%
 \subsubsection{Participants}\label{participants-8}}
 
-43 participant recruited from Tsinghua University university community (21 females; 18 to 29 years of age, mean age = 22.93 ±2.56). All participants were right-handed, and all had normal or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committee. The data from 5 participants were excluded from analysis, one (male) didn't finished the experiment, and the other four accuracy was less than 60\%. The results for the remaining 38 subjects, with mean age of 22.875 ± 2.59, were included in data analyses.
+43 participant recruited from Tsinghua University university community (21 females; age = 22.47 \(\pm\) 2.48). All participants were right-handed, and all had normal or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committee. The data from 5 participants were excluded from analysis, 1 participant didn't finished the experiment, and the other 4 were exclued because of the overall accuracy was less than 60\%. The results for the remaining 38 subjects (18 female, age = 22.32 \(\pm\) 2.41) were included in data analyses.
 
 \hypertarget{experimental-design-2}{%
 \subsubsection{Experimental design}\label{experimental-design-2}}
 
 A 4 × 3 × 2 within-subject design was used. The first independent variable was stimuli categories (morality, atttractiveness of people, attractiveness of scene, and emotional words); the second independent variables is valence (positive, neutral and negative); the third variable was the matching between shape and label (match vs.~mismatch for the association). The task was to learn the association between each geometric shape and the self/other label.
-\#\#\#Stimuli
-4 sets of shapes were included (three circle, three rectangle, three kind of triangle, and three kinds of quadrangle), each set of shape were paired with one category of words, counter-balanced across subjects. Besides the behavioral experiments, participants also finished questionnaires XXXXXXXX.
+
+\hypertarget{stimuli-3}{%
+\subsubsection{Stimuli}\label{stimuli-3}}
+
+4 sets of shapes were included (three circle, three rectangle, three kind of triangle, and three kinds of quadrangle), each set of shape were paired with one category of label, counter-balanced across subjects. Besides the behavioral experiments, participants also finished questionnaires XXXXXXXX.
 
 \hypertarget{procedure-8}{%
 \subsubsection{Procedure}\label{procedure-8}}
 
 Participants finish 4 session of experiment, and each include one experiment as in experiment 1. And the order of each category was randomnized for each participants. Each session started with a practice, and proceed to formal experiment when reached over 60\% accuracy. Each session included 6 blocks of trial, each with 120 trials.
+
+\hypertarget{results-8}{%
+\subsection{Results}\label{results-8}}
+
+\hypertarget{d-prime-1}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-1}}
+
+We conducted 4 (task type: morality, emotion, person, scene) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of task type (\(F(2.95, 108.97) = 1.18\), \(\mathit{MSE} = 0.76\), \(p = .321\), \(\hat{\eta}^2_G = .006\)), but revealed effect of valence, \(F(1.85, 68.49) = 29.70\), \(\mathit{MSE} = 0.29\), \(p < .001\), \(\hat{\eta}^2_G = .034\), and their interactions, \(F(4.68, 173.09) = 5.85\), \(\mathit{MSE} = 0.31\), \(p < .001\), \(\hat{\eta}^2_G = .019\).
+
+To understand the interaction, we separated four different tasks. For the morality task, the valence effect \(F(1.96, 72.66) = 2.22\), \(\mathit{MSE} = 0.21\), \(p = .116\), \(\hat{\eta}^2_G = .008\); for emotion, \(F(1.69, 62.65) = 5.28\), \(\mathit{MSE} = 0.30\), \(p = .011\), \(\hat{\eta}^2_G = .030\); for the person appearance, \(F(1.73, 64.02) = 27.22\), \(\mathit{MSE} = 0.26\), \(p < .001\), \(\hat{\eta}^2_G = .088\); for scene appearance, \(F(1.79, 66.4) = 14.02\), \(\mathit{MSE} = 0.34\), \(p < .001\), \(\hat{\eta}^2_G = .072\).
 
 \hypertarget{experiment-6a-eeg-study-1}{%
 \section{Experiment 6a: EEG study 1}\label{experiment-6a-eeg-study-1}}
@@ -685,8 +698,8 @@ Experiment 6a was conducted to study the neural correlates of the positive prior
 
 The experimental design of this experiment is same as experiment 2: a 3 × 2 within-subject design with moral valence (good, neutral and bad associations) and matchness between shape and label (match vs.~mismatch for the personal association) as within-subject variables.
 
-\hypertarget{stimuli-3}{%
-\subsubsection{Stimuli}\label{stimuli-3}}
+\hypertarget{stimuli-4}{%
+\subsubsection{Stimuli}\label{stimuli-4}}
 
 Three geometric shapes (triangle, square and circle, each 4.6º × 4.6º of visual angle) were presented at the center of screen for 50 ms after 500ms of fixation (0.8º × 0.8º of visual angle). The association of the three shapes to bad person (\enquote{坏人, HuaiRen}), good person (\enquote{好人, HaoRen}) or ordinary person (\enquote{常人, ChangRen}) was counterbalanced across participants. The words bad person, good person or ordinary person (3.6º × 1.6º) was also displayed at the center fo the screen. Participants had to judge whether the pairings of label and shape matched (e.g., Does the circle represent a bad person?). The experiment was run on a PC using E-prime software (version 2.0). These stimuli were displayed on a 22-in CRT monitor (1024×768 at 100Hz).
 We used backward masking to avoid over-processing of the moral words, in which a scrabmled picture were presented for 900 ms after the label. Also, to avoid the celling effect on accruacy, shapes were presented on a noisy background based on our pilot studies. The noisy images were made by scrambling a picutre of 3/4gray and ¼ white at resoluation of 2 × 2 pixel.
@@ -700,13 +713,13 @@ As in experiment 2 (Sui, He, \& Humphreys, 2012), subjects first learned the ass
 
 All the stimuli were presented on a gray background (RGB: 127, 127, 127). E-primed 2.0 was used to present stimuli and collect behavioral results. Data were collected and analyzed when accuracy performance in total reached 60\%.
 
-\hypertarget{results-8}{%
-\subsection{Results}\label{results-8}}
+\hypertarget{results-9}{%
+\subsection{Results}\label{results-9}}
 
 Only the behavioral results were reported here.
 
-\hypertarget{d-prime-1}{%
-\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-1}}
+\hypertarget{d-prime-2}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-2}}
 
 We conducted repeated measures ANOVA, with moral valence as independent variable. The results revealed the main effect of valence (\(F(1.73, 41.45) = 4.63\), \(\mathit{MSE} = 0.10\), \(p = .019\), \(\hat{\eta}^2_G = .025\)). Post-hoc anlaysis revealed that shapes link with Good person (mean = 3.13, SE = 0.109) is greater than Neutral condition (mean = 2.88, SE = 0.14),\emph{t} = 2.916, \emph{df} = 24, \emph{p} = 0.02, p-value adjusted by Tukey method, but the \emph{d} prime between Good and bad (mean = 3.03, SE = 0.142) (\emph{t} = 1.512, \emph{df} = 24, \emph{p} = 0.3034, p-value adjusted by Tukey method), bad and neutral (\emph{t} = 1.599, \emph{df} = 24, \emph{p} = 0.2655, p-value adjusted by Tukey method) were not siginificant.
 
@@ -735,8 +748,8 @@ Experiment 6b was conducted to study the neural correlates of the prioritization
 
 The experimental design of this experiment is same as experiment 3: a 2 × 3 × 2 within-subject design with self-relevance (self-relevant vs.~other-relevant), moral valence (good, neutral and bad associations) and matchness between shape and label (match vs.~mismatch for the personal association) as within-subject variables.
 
-\hypertarget{stimuli-4}{%
-\subsubsection{Stimuli}\label{stimuli-4}}
+\hypertarget{stimuli-5}{%
+\subsubsection{Stimuli}\label{stimuli-5}}
 
 As in experiment 3 a \& 3b, 6 shapes were included (triangle, square, circle, trapezoid, diamond, regular pentagon), as well as 6 labels (good self, neutral self, bad self, good person, bad person, neutral person). To match the concreteness of the label, we asked participant to chosen an unfamiliar name of their own gender to be the stranger.
 
@@ -749,16 +762,16 @@ All the stimuli were presented on a gray background (RGB: 127, 127, 127). E-prim
 
 Given that learning 6 association is more difficult than 3 association and participant has low accuracy at the begining, to maximizing the accurate trials that can be used in EEG data, the current experiment has two day session. At the first day, participants learnt the associations and finished XX blocks of the matching task, each had XX trials, without EEG recording. They came back to lab at the second day and finish the same task again, with EEG recorded.
 
-\hypertarget{results-9}{%
-\subsection{Results}\label{results-9}}
+\hypertarget{results-10}{%
+\subsection{Results}\label{results-10}}
 
 Only the behavioral results were reported here.
 
 \hypertarget{day-one}{%
 \subsubsection{Day one}\label{day-one}}
 
-\hypertarget{d-prime-2}{%
-\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-2}}
+\hypertarget{d-prime-3}{%
+\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-3}}
 
 There was evidence for the interaction between identity and valence, \(F(2, 42) = 12.88\), \(\mathit{MSE} = 0.13\), \(p < .001\), \(\hat{\eta}^2_G = .041\). We further split the self- and other-relevant trials. For the self trials, there was significant effect of valence, \(F(2, 42) = 29.31\), \(\mathit{MSE} = 0.12\), \(p < .001\), \(\hat{\eta}^2_G = .147\). Post-hoc comparison showed that the good-self condition (2.71, SE = 0.199) is better than both neutral-self (1.98, SE = 0.151), \emph{t}(21) = 5.984, \emph{p} \textless{} 0.001, and bad-self condition (2.07, SE = 0.154), \emph{t}(21) = 6.555, \emph{p} \textless{} 0.001. But there was no significant difference between bad-self and neutral-self, \emph{t}(21) = -1.059, \emph{p} = 0.549. For other trials, there was no significant effect of valuence, \(F(2, 42) = 0.00\), \(\mathit{MSE} = 0.16\), \(p = .999\), \(\hat{\eta}^2_G = .000\).
 
@@ -770,8 +783,8 @@ For the matched trials, there was interaction between identity and valence, \(F(
 \hypertarget{day-two}{%
 \subsubsection{Day two}\label{day-two}}
 
-\hypertarget{d-prime-3}{%
-\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-3}}
+\hypertarget{d-prime-4}{%
+\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-4}}
 
 There was evidence for the interaction between identity and valence, \(F(2, 42) = 3.86\), \(\mathit{MSE} = 0.08\), \(p = .029\), \(\hat{\eta}^2_G = .005\). We further split the self- and other-relevant trials. For the self trials, there was significant effect of valence, \(F(2, 42) = 7.35\), \(\mathit{MSE} = 0.08\), \(p = .002\), \(\hat{\eta}^2_G = .021\). Post-hoc comparison showed that the good-self condition (2.71, SE = 0.214) is better than both neutral-self (2.43, SE = 0.175), \emph{t}(21) = 2.98, \emph{p} = 0.0189, and bad-self condition (2.43, SE = 0.199), \emph{t}(21) = 3.93, \emph{p} = 0.0021. But there was no significant difference between bad-self and neutral-self, \emph{t}(21) = -0.097, \emph{p} = 0.995. For other trials, there was no significant effect of valuence, \(F(2, 42) = 1.46\), \(\mathit{MSE} = 0.09\), \(p = .245\), \(\hat{\eta}^2_G = .004\).
 
